[package]
name = "btrfs_exporter"
version = "26.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
opentelemetry = "0.20.0"
opentelemetry-otlp = "0.13.0"
prometheus_exporter = "0.8.5"
signal-hook = "0.4.1"
subprocess = "0.2.9"
tracing = "0.1"
tracing-core = "0.1.36"
tracing-glog = "0.4"
tracing-opentelemetry = "0.21.0"
tracing-subscriber = "0.3.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
