[package]
name = "btrfs_exporter"
version = "26.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"] }
prometheus_exporter = "0.8.5"
futures = "0.3"
tracing = "0.1"
tracing-core = "0.1.36"
tracing-glog = "0.4"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = "0.3.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "sync"] }
