[package]
name = "btrfs_exporter"
version = "26.1.1"
edition = "2021"

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"], optional = true }
prometheus_exporter = "0.8.5"
futures = "0.3"
tracing = "0.1"
tracing-core = "0.1.36"
tracing-glog = "0.4"
tracing-opentelemetry = { version = "0.32.1", optional = true }
tracing-subscriber = "0.3.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "signal", "sync", "time"] }
